# nlp_100_knocks_2020

./: .gitignore  README.md  pyproject.toml
ch01/: 00.py  01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py
ch02/: 10.sh  11.sh  12.sh  13.sh  14.sh  15.sh  16.sh  17.sh  18.sh  19.sh
ch03/: 20.py  21.py  22.py  23.py  24.py  25.py  26.py  27.py  28.py  29.py
ch04/: 30.py  31.py  32.py  33.py  34.py  35.py  36.py
ch05/: 40.py  41.py  42.py
