[tool.poetry]
name = "nlp_100_knocks_2020"
version = "0.1.0"
description = ""
authors = ["hakubishin3 <hansaku187@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.5"
numpy = "^1.19.1"
mecab = "^0.996.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
